; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/char/extr_tty_io.c_tty_vhangup_self.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/char/extr_tty_io.c_tty_vhangup_self.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tty_struct = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @tty_vhangup_self() #0 {
  %1 = alloca %struct.tty_struct*, align 8
  %2 = call %struct.tty_struct* (...) @get_current_tty()
  store %struct.tty_struct* %2, %struct.tty_struct** %1, align 8
  %3 = load %struct.tty_struct*, %struct.tty_struct** %1, align 8
  %4 = icmp ne %struct.tty_struct* %3, null
  br i1 %4, label %5, label %10

5:                                                ; preds = %0
  %6 = load %struct.tty_struct*, %struct.tty_struct** %1, align 8
  %7 = call i32 @tty_vhangup(%struct.tty_struct* %6)
  %8 = load %struct.tty_struct*, %struct.tty_struct** %1, align 8
  %9 = call i32 @tty_kref_put(%struct.tty_struct* %8)
  br label %10

10:                                               ; preds = %5, %0
  ret void
}

declare dso_local %struct.tty_struct* @get_current_tty(...) #1

declare dso_local i32 @tty_vhangup(%struct.tty_struct*) #1

declare dso_local i32 @tty_kref_put(%struct.tty_struct*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
